--- a/Index.html
+++ b/Index.html
@@ -7,15 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="main-division">
-        <section id="item-photo">
-            <img src="assets/burger-paneer.jpg" alt="">
-            <button type="button" id="best-seller">Best Seller</button>
+    <section id="main-section">
+        <section id="sub-section">
+            <div>
+                <img src="assets/burger-paneer.jpg" alt="">
+                <button id="Best-Seller">Best Seller</button>
+                <button id="must-try">Must try</button>
+            </div>
+            <h1>Burger-Paneer Cheese</h1>
+            <p>This is main and special burger. Yummy, most Recommended</p>
         </section>
-        <section id="item-desc">
-            <h2>Burger - Panner Cheese</h2>
-            <p>This is main and special Cheese burger. Yummy, Most Recommended</p>
-        </section>
-    </div>
+    </section>
 </body>
 </html>
