PSA-3456: Buttons to develop - like, message, forward and save
PSA-3456: Buttons to develop - like, message, forward and save

--- a/Index.html
+++ b/Index.html
@@ -17,6 +17,12 @@
             <h1>Burger-Paneer Cheese</h1>
             <p>This is main and special burger. Yummy, most Recommended</p>
         </section>
+        <section id="card-buttons">
+            <i class="bi bi-heart"></i>
+            <i class="bi bi-chat-left-text-fill"></i>
+            <i class="bi bi-heart"></i>
+            <i class="bi bi-bookmarks-fill"></i>
+        </section>
     </section>
 </body>
 </html>
